@@ -74,8 +74,10 @@ if not exist "%JAVACMD%" (
   goto error
 )
 
+set MODULE_PATH="%MAVEN_HOME%\modules"
+
 @REM Check Java version by testing the Java 17+ flag
-"%JAVACMD%" --enable-native-access=ALL-UNNAMED -version >nul 2>&1
+"%JAVACMD%" --module-path %MODULE_PATH% --add-modules org.jline.nativ --enable-native-access=org.jline.nativ -version >nul 2>&1
 if ERRORLEVEL 1 (
     echo Error: Apache Maven 4.x requires Java 17 or newer to run. >&2
     "%JAVACMD%" -version >&2
@@ -301,7 +303,9 @@ if defined MAVEN_DEBUG_SCRIPT (
   %MAVEN_OPTS% ^
   %JVM_CONFIG_MAVEN_OPTS% ^
   %MAVEN_DEBUG_OPTS% ^
-  --enable-native-access=ALL-UNNAMED ^
+  --module-path %MODULE_PATH% ^
+  --add-modules org.jline.nativ ^
+  --enable-native-access=org.jline.nativ ^
   -classpath %LAUNCHER_JAR% ^
   "-Dclassworlds.conf=%CLASSWORLDS_CONF%" ^
   "-Dmaven.home=%MAVEN_HOME%" ^
